- creation of dataset from paragraph view fixed - read data from the disk to dataset rather than store all in the dataset.

--- a/squad/Model_Execution_for_Tracing_Improvement.ipynb
+++ b/squad/Model_Execution_for_Tracing_Improvement.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
        "['1 --> /home/jackalhan/Development/github/more_meaningful_representations/squad/train/improvement/model_performances/subset_5000/model_2_layers_1_epoch_10_mar_0.6_sf_0.1_wd_0.001_lr_0.001_dim_2048_keep_1_seed_66_loss_v3/debug_dict.pkl']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
        "'/home/jackalhan/Development/github/more_meaningful_representations/squad/train/improvement/model_performances/subset_5000/model_2_layers_1_epoch_10_mar_0.6_sf_0.1_wd_0.001_lr_0.001_dim_2048_keep_1_seed_66_loss_v3/debug_dict.pkl'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -118,6 +118,7 @@
          "mode": "lines+markers",
          "name": "Top top_1",
          "type": "scatter",
+         "uid": "6af47fb0-b959-11e8-a9b3-989096cb06e5",
          "x": [
           0,
           1,
@@ -142,13 +143,14 @@
           0.45955786736020804,
           0.45799739921976595,
           0.4564369310793238,
-          0.45435630689206763
+          0.4546163849154746
          ]
         },
         {
          "mode": "lines+markers",
          "name": "Top top_2",
          "type": "scatter",
+         "uid": "6af47fb1-b959-11e8-a9b3-989096cb06e5",
          "x": [
           0,
           1,
@@ -180,6 +182,7 @@
          "mode": "lines+markers",
          "name": "Top top_5",
          "type": "scatter",
+         "uid": "6af47fb2-b959-11e8-a9b3-989096cb06e5",
          "x": [
           0,
           1,
@@ -211,6 +214,7 @@
          "mode": "lines+markers",
          "name": "Top top_10",
          "type": "scatter",
+         "uid": "6af47fb3-b959-11e8-a9b3-989096cb06e5",
          "x": [
           0,
           1,
@@ -242,6 +246,7 @@
          "mode": "lines+markers",
          "name": "Top top_20",
          "type": "scatter",
+         "uid": "6af47fb4-b959-11e8-a9b3-989096cb06e5",
          "x": [
           0,
           1,
@@ -273,6 +278,7 @@
          "mode": "lines+markers",
          "name": "Top top_50",
          "type": "scatter",
+         "uid": "6af47fb5-b959-11e8-a9b3-989096cb06e5",
          "x": [
           0,
           1,
@@ -312,10 +318,24 @@
        }
       },
       "text/html": [
-       "<div id=\"03e2d6f4-cfc3-4add-a671-3bb87210d2a9\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"03e2d6f4-cfc3-4add-a671-3bb87210d2a9\", [{\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"name\": \"Top top_1\", \"mode\": \"lines+markers\", \"type\": \"scatter\", \"y\": [0.447594278283485, 0.44187256176853057, 0.45123537061118335, 0.4577373211963589, 0.45929778933680104, 0.4611183355006502, 0.45851755526658, 0.45955786736020804, 0.45799739921976595, 0.4564369310793238, 0.45435630689206763]}, {\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"name\": \"Top top_2\", \"mode\": \"lines+markers\", \"type\": \"scatter\", \"y\": [0.5622886866059817, 0.5563068920676203, 0.5609882964889467, 0.5685305591677503, 0.5703511053315995, 0.5721716514954487, 0.5711313394018206, 0.5708712613784135, 0.5693107932379714, 0.5690507152145644, 0.5685305591677503]}, {\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"name\": \"Top top_5\", \"mode\": \"lines+markers\", \"type\": \"scatter\", \"y\": [0.6829648894668401, 0.6842652795838752, 0.6894668400520156, 0.6923276983094928, 0.6928478543563069, 0.693628088426528, 0.693628088426528, 0.6928478543563069, 0.6912873862158647, 0.6905071521456437, 0.6902470741222366]}, {\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"name\": \"Top top_10\", \"mode\": \"lines+markers\", \"type\": \"scatter\", \"y\": [0.765149544863459, 0.7594278283485045, 0.7693107932379714, 0.7739921976592978, 0.7752925877763329, 0.7747724317295188, 0.7726918075422626, 0.7737321196358907, 0.7729518855656697, 0.7711313394018205, 0.7713914174252275]}, {\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"name\": \"Top top_20\", \"mode\": \"lines+markers\", \"type\": \"scatter\", \"y\": [0.8319895968790637, 0.8306892067620286, 0.8384915474642393, 0.8418725617685305, 0.8421326397919375, 0.8418725617685305, 0.8418725617685305, 0.8418725617685305, 0.8408322496749024, 0.8403120936280885, 0.8392717815344604]}, {\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"name\": \"Top top_50\", \"mode\": \"lines+markers\", \"type\": \"scatter\", \"y\": [0.8925877763328999, 0.8925877763328999, 0.8964889466840053, 0.8993498049414824, 0.9001300390117035, 0.9011703511053316, 0.9006501950585175, 0.8993498049414824, 0.8985695708712613, 0.8980494148244473, 0.8972691807542262]}], {\"title\": \"How the recalls at top n are changing for each epoch\", \"xaxis\": {\"title\": \"Epochs\"}, \"yaxis\": {\"title\": \"Recall Values\"}}, {\"linkText\": \"Export to plot.ly\", \"showLink\": true})});</script>"
+       "<div id=\"e1dd1774-96a5-41ca-9ea0-8b37ce5c664d\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
+       "        Plotly.plot(\n",
+       "            'e1dd1774-96a5-41ca-9ea0-8b37ce5c664d',\n",
+       "            [{\"x\": [0.0, 1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 10.0], \"uid\": \"6af47fb0-b959-11e8-a9b3-989096cb06e5\", \"y\": [0.447594278283485, 0.44187256176853057, 0.45123537061118335, 0.4577373211963589, 0.45929778933680104, 0.4611183355006502, 0.45851755526658, 0.45955786736020804, 0.45799739921976595, 0.4564369310793238, 0.4546163849154746], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_1\"}, {\"x\": [0.0, 1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 10.0], \"uid\": \"6af47fb1-b959-11e8-a9b3-989096cb06e5\", \"y\": [0.5622886866059817, 0.5563068920676203, 0.5609882964889467, 0.5685305591677503, 0.5703511053315995, 0.5721716514954487, 0.5711313394018206, 0.5708712613784135, 0.5693107932379714, 0.5690507152145644, 0.5685305591677503], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_2\"}, {\"x\": [0.0, 1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 10.0], \"uid\": \"6af47fb2-b959-11e8-a9b3-989096cb06e5\", \"y\": [0.6829648894668401, 0.6842652795838752, 0.6894668400520156, 0.6923276983094928, 0.6928478543563069, 0.693628088426528, 0.693628088426528, 0.6928478543563069, 0.6912873862158647, 0.6905071521456437, 0.6902470741222366], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_5\"}, {\"x\": [0.0, 1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 10.0], \"uid\": \"6af47fb3-b959-11e8-a9b3-989096cb06e5\", \"y\": [0.765149544863459, 0.7594278283485045, 0.7693107932379714, 0.7739921976592978, 0.7752925877763329, 0.7747724317295188, 0.7726918075422626, 0.7737321196358907, 0.7729518855656697, 0.7711313394018205, 0.7713914174252275], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_10\"}, {\"x\": [0.0, 1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 10.0], \"uid\": \"6af47fb4-b959-11e8-a9b3-989096cb06e5\", \"y\": [0.8319895968790637, 0.8306892067620286, 0.8384915474642393, 0.8418725617685305, 0.8421326397919375, 0.8418725617685305, 0.8418725617685305, 0.8418725617685305, 0.8408322496749024, 0.8403120936280885, 0.8392717815344604], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_20\"}, {\"x\": [0.0, 1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 10.0], \"uid\": \"6af47fb5-b959-11e8-a9b3-989096cb06e5\", \"y\": [0.8925877763328999, 0.8925877763328999, 0.8964889466840053, 0.8993498049414824, 0.9001300390117035, 0.9011703511053316, 0.9006501950585175, 0.8993498049414824, 0.8985695708712613, 0.8980494148244473, 0.8972691807542262], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_50\"}],\n",
+       "            {\"yaxis\": {\"title\": \"Recall Values\"}, \"xaxis\": {\"title\": \"Epochs\"}, \"title\": \"How the recalls at top n are changing for each epoch\"},\n",
+       "            {\"showLink\": true, \"linkText\": \"Export to plot.ly\"}\n",
+       "        ).then(function () {return Plotly.addFrames('e1dd1774-96a5-41ca-9ea0-8b37ce5c664d',{});}).then(function(){Plotly.animate('e1dd1774-96a5-41ca-9ea0-8b37ce5c664d');})\n",
+       "        });</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"03e2d6f4-cfc3-4add-a671-3bb87210d2a9\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"03e2d6f4-cfc3-4add-a671-3bb87210d2a9\", [{\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"name\": \"Top top_1\", \"mode\": \"lines+markers\", \"type\": \"scatter\", \"y\": [0.447594278283485, 0.44187256176853057, 0.45123537061118335, 0.4577373211963589, 0.45929778933680104, 0.4611183355006502, 0.45851755526658, 0.45955786736020804, 0.45799739921976595, 0.4564369310793238, 0.45435630689206763]}, {\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"name\": \"Top top_2\", \"mode\": \"lines+markers\", \"type\": \"scatter\", \"y\": [0.5622886866059817, 0.5563068920676203, 0.5609882964889467, 0.5685305591677503, 0.5703511053315995, 0.5721716514954487, 0.5711313394018206, 0.5708712613784135, 0.5693107932379714, 0.5690507152145644, 0.5685305591677503]}, {\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"name\": \"Top top_5\", \"mode\": \"lines+markers\", \"type\": \"scatter\", \"y\": [0.6829648894668401, 0.6842652795838752, 0.6894668400520156, 0.6923276983094928, 0.6928478543563069, 0.693628088426528, 0.693628088426528, 0.6928478543563069, 0.6912873862158647, 0.6905071521456437, 0.6902470741222366]}, {\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"name\": \"Top top_10\", \"mode\": \"lines+markers\", \"type\": \"scatter\", \"y\": [0.765149544863459, 0.7594278283485045, 0.7693107932379714, 0.7739921976592978, 0.7752925877763329, 0.7747724317295188, 0.7726918075422626, 0.7737321196358907, 0.7729518855656697, 0.7711313394018205, 0.7713914174252275]}, {\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"name\": \"Top top_20\", \"mode\": \"lines+markers\", \"type\": \"scatter\", \"y\": [0.8319895968790637, 0.8306892067620286, 0.8384915474642393, 0.8418725617685305, 0.8421326397919375, 0.8418725617685305, 0.8418725617685305, 0.8418725617685305, 0.8408322496749024, 0.8403120936280885, 0.8392717815344604]}, {\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"name\": \"Top top_50\", \"mode\": \"lines+markers\", \"type\": \"scatter\", \"y\": [0.8925877763328999, 0.8925877763328999, 0.8964889466840053, 0.8993498049414824, 0.9001300390117035, 0.9011703511053316, 0.9006501950585175, 0.8993498049414824, 0.8985695708712613, 0.8980494148244473, 0.8972691807542262]}], {\"title\": \"How the recalls at top n are changing for each epoch\", \"xaxis\": {\"title\": \"Epochs\"}, \"yaxis\": {\"title\": \"Recall Values\"}}, {\"linkText\": \"Export to plot.ly\", \"showLink\": true})});</script>"
+       "<div id=\"e1dd1774-96a5-41ca-9ea0-8b37ce5c664d\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
+       "        Plotly.plot(\n",
+       "            'e1dd1774-96a5-41ca-9ea0-8b37ce5c664d',\n",
+       "            [{\"x\": [0.0, 1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 10.0], \"uid\": \"6af47fb0-b959-11e8-a9b3-989096cb06e5\", \"y\": [0.447594278283485, 0.44187256176853057, 0.45123537061118335, 0.4577373211963589, 0.45929778933680104, 0.4611183355006502, 0.45851755526658, 0.45955786736020804, 0.45799739921976595, 0.4564369310793238, 0.4546163849154746], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_1\"}, {\"x\": [0.0, 1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 10.0], \"uid\": \"6af47fb1-b959-11e8-a9b3-989096cb06e5\", \"y\": [0.5622886866059817, 0.5563068920676203, 0.5609882964889467, 0.5685305591677503, 0.5703511053315995, 0.5721716514954487, 0.5711313394018206, 0.5708712613784135, 0.5693107932379714, 0.5690507152145644, 0.5685305591677503], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_2\"}, {\"x\": [0.0, 1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 10.0], \"uid\": \"6af47fb2-b959-11e8-a9b3-989096cb06e5\", \"y\": [0.6829648894668401, 0.6842652795838752, 0.6894668400520156, 0.6923276983094928, 0.6928478543563069, 0.693628088426528, 0.693628088426528, 0.6928478543563069, 0.6912873862158647, 0.6905071521456437, 0.6902470741222366], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_5\"}, {\"x\": [0.0, 1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 10.0], \"uid\": \"6af47fb3-b959-11e8-a9b3-989096cb06e5\", \"y\": [0.765149544863459, 0.7594278283485045, 0.7693107932379714, 0.7739921976592978, 0.7752925877763329, 0.7747724317295188, 0.7726918075422626, 0.7737321196358907, 0.7729518855656697, 0.7711313394018205, 0.7713914174252275], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_10\"}, {\"x\": [0.0, 1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 10.0], \"uid\": \"6af47fb4-b959-11e8-a9b3-989096cb06e5\", \"y\": [0.8319895968790637, 0.8306892067620286, 0.8384915474642393, 0.8418725617685305, 0.8421326397919375, 0.8418725617685305, 0.8418725617685305, 0.8418725617685305, 0.8408322496749024, 0.8403120936280885, 0.8392717815344604], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_20\"}, {\"x\": [0.0, 1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 10.0], \"uid\": \"6af47fb5-b959-11e8-a9b3-989096cb06e5\", \"y\": [0.8925877763328999, 0.8925877763328999, 0.8964889466840053, 0.8993498049414824, 0.9001300390117035, 0.9011703511053316, 0.9006501950585175, 0.8993498049414824, 0.8985695708712613, 0.8980494148244473, 0.8972691807542262], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_50\"}],\n",
+       "            {\"yaxis\": {\"title\": \"Recall Values\"}, \"xaxis\": {\"title\": \"Epochs\"}, \"title\": \"How the recalls at top n are changing for each epoch\"},\n",
+       "            {\"showLink\": true, \"linkText\": \"Export to plot.ly\"}\n",
+       "        ).then(function () {return Plotly.addFrames('e1dd1774-96a5-41ca-9ea0-8b37ce5c664d',{});}).then(function(){Plotly.animate('e1dd1774-96a5-41ca-9ea0-8b37ce5c664d');})\n",
+       "        });</script>"
       ]
      },
      "metadata": {},
@@ -394,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +521,7 @@
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>10</td>\n",
-       "      <td>0.454356</td>\n",
+       "      <td>0.454616</td>\n",
        "      <td>0.568531</td>\n",
        "      <td>0.690247</td>\n",
        "      <td>0.771391</td>\n",
@@ -551,13 +571,13 @@
        "8       8  0.457997  0.569311  0.691287  0.772952  0.840832  0.898570\n",
        "3       3  0.457737  0.568531  0.692328  0.773992  0.841873  0.899350\n",
        "9       9  0.456437  0.569051  0.690507  0.771131  0.840312  0.898049\n",
-       "10     10  0.454356  0.568531  0.690247  0.771391  0.839272  0.897269\n",
+       "10     10  0.454616  0.568531  0.690247  0.771391  0.839272  0.897269\n",
        "2       2  0.451235  0.560988  0.689467  0.769311  0.838492  0.896489\n",
        "0       0  0.447594  0.562289  0.682965  0.765150  0.831990  0.892588\n",
        "1       1  0.441873  0.556307  0.684265  0.759428  0.830689  0.892588"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
