- CNN mean is fixed

--- a/squad/Model_Execution_for_Tracing_Improvement.ipynb
+++ b/squad/Model_Execution_for_Tracing_Improvement.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,16 +53,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['1 --> /home/jackalhan/Development/github/more_meaningful_representations/squad/train/improvement/model_performances/subset_5000/model_2_layers_1_epoch_2_mar_0.6_sf_0.1_wd_0.001_lr_0.001_dim_2048_keep_1_seed_66_loss_v3/debug_dict.pkl']"
+       "['5 --> /home/jackalhan/Development/github/more_meaningful_representations/squad/train/improvement/model_performances/subset_5000/model_2_layers_8_epoch_1_mar_0.6_sf_0.9_0.9_0.9_0.9_0.9_0.9_0.9_0.9_wd_0.001_0.001_0.001_0.001_0.001_0.001_0.001_0.001_lr_0.001_dim_2048_2048_2048_2048_2048_2048_2048_2048_keep_1_1_1_1_1_1_1_1_seed_66_66_66_66_66_66_66_66_loss_v3/debug_dict.pkl']"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,22 +79,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/home/jackalhan/Development/github/more_meaningful_representations/squad/train/improvement/model_performances/subset_5000/model_2_layers_1_epoch_2_mar_0.6_sf_0.1_wd_0.001_lr_0.001_dim_2048_keep_1_seed_66_loss_v3/debug_dict.pkl'"
+       "'/home/jackalhan/Development/github/more_meaningful_representations/squad/train/improvement/model_performances/subset_5000/model_2_layers_8_epoch_1_mar_0.6_sf_0.9_0.9_0.9_0.9_0.9_0.9_0.9_0.9_wd_0.001_0.001_0.001_0.001_0.001_0.001_0.001_0.001_lr_0.001_dim_2048_2048_2048_2048_2048_2048_2048_2048_keep_1_1_1_1_1_1_1_1_seed_66_66_66_66_66_66_66_66_loss_v3/debug_dict.pkl'"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model_indx =1\n",
+    "model_indx =5\n",
     "my_dict = load_from_pickle(os.path.join(base_data_path, \n",
     "                                        debug_files[model_indx]))\n",
     "num_of_epochs = my_dict['epochs']\n",
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -118,96 +118,84 @@
          "mode": "lines+markers",
          "name": "Top top_1",
          "type": "scatter",
-         "uid": "f8395484-ba5a-11e8-a9b3-989096cb06e5",
+         "uid": "1e51ad22-ba9e-11e8-a9b3-989096cb06e5",
          "x": [
           0,
-          1,
-          2
+          1
          ],
          "y": [
-          0.0898,
-          0.0896,
-          0.0898
+          0.3372,
+          0.0022
          ]
         },
         {
          "mode": "lines+markers",
          "name": "Top top_2",
          "type": "scatter",
-         "uid": "f8395485-ba5a-11e8-a9b3-989096cb06e5",
+         "uid": "1e51ad23-ba9e-11e8-a9b3-989096cb06e5",
          "x": [
           0,
-          1,
-          2
+          1
          ],
          "y": [
-          0.1446,
-          0.1448,
-          0.1448
+          0.4244,
+          0.0034
          ]
         },
         {
          "mode": "lines+markers",
          "name": "Top top_5",
          "type": "scatter",
-         "uid": "f8395486-ba5a-11e8-a9b3-989096cb06e5",
+         "uid": "1e51ad24-ba9e-11e8-a9b3-989096cb06e5",
          "x": [
           0,
-          1,
-          2
+          1
          ],
          "y": [
-          0.2394,
-          0.2396,
-          0.2398
+          0.5334,
+          0.008
          ]
         },
         {
          "mode": "lines+markers",
          "name": "Top top_10",
          "type": "scatter",
-         "uid": "f8395487-ba5a-11e8-a9b3-989096cb06e5",
+         "uid": "1e51ad25-ba9e-11e8-a9b3-989096cb06e5",
          "x": [
           0,
-          1,
-          2
+          1
          ],
          "y": [
-          0.306,
-          0.306,
-          0.3062
+          0.61,
+          0.013
          ]
         },
         {
          "mode": "lines+markers",
          "name": "Top top_20",
          "type": "scatter",
-         "uid": "f8395488-ba5a-11e8-a9b3-989096cb06e5",
+         "uid": "1e51ad26-ba9e-11e8-a9b3-989096cb06e5",
          "x": [
           0,
-          1,
-          2
+          1
          ],
          "y": [
-          0.3778,
-          0.378,
-          0.3778
+          0.6806,
+          0.021
          ]
         },
         {
          "mode": "lines+markers",
          "name": "Top top_50",
          "type": "scatter",
-         "uid": "f8395489-ba5a-11e8-a9b3-989096cb06e5",
+         "uid": "1e51ad27-ba9e-11e8-a9b3-989096cb06e5",
          "x": [
           0,
-          1,
-          2
+          1
          ],
          "y": [
-          0.4706,
-          0.4714,
-          0.4704
+          0.7612,
+          0.037
          ]
         }
        ],
@@ -222,23 +210,23 @@
        }
       },
       "text/html": [
-       "<div id=\"6fd36332-e59e-4eb8-9205-50435a51f8c7\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
+       "<div id=\"024e94bc-e691-4a17-b4fc-97ea41b50421\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
        "        Plotly.plot(\n",
-       "            '6fd36332-e59e-4eb8-9205-50435a51f8c7',\n",
-       "            [{\"x\": [0.0, 1.0, 2.0], \"uid\": \"f8395484-ba5a-11e8-a9b3-989096cb06e5\", \"y\": [0.0898, 0.0896, 0.0898], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_1\"}, {\"x\": [0.0, 1.0, 2.0], \"uid\": \"f8395485-ba5a-11e8-a9b3-989096cb06e5\", \"y\": [0.1446, 0.1448, 0.1448], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_2\"}, {\"x\": [0.0, 1.0, 2.0], \"uid\": \"f8395486-ba5a-11e8-a9b3-989096cb06e5\", \"y\": [0.2394, 0.2396, 0.2398], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_5\"}, {\"x\": [0.0, 1.0, 2.0], \"uid\": \"f8395487-ba5a-11e8-a9b3-989096cb06e5\", \"y\": [0.306, 0.306, 0.3062], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_10\"}, {\"x\": [0.0, 1.0, 2.0], \"uid\": \"f8395488-ba5a-11e8-a9b3-989096cb06e5\", \"y\": [0.3778, 0.378, 0.3778], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_20\"}, {\"x\": [0.0, 1.0, 2.0], \"uid\": \"f8395489-ba5a-11e8-a9b3-989096cb06e5\", \"y\": [0.4706, 0.4714, 0.4704], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_50\"}],\n",
+       "            '024e94bc-e691-4a17-b4fc-97ea41b50421',\n",
+       "            [{\"x\": [0.0, 1.0], \"uid\": \"1e51ad22-ba9e-11e8-a9b3-989096cb06e5\", \"y\": [0.3372, 0.0022], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_1\"}, {\"x\": [0.0, 1.0], \"uid\": \"1e51ad23-ba9e-11e8-a9b3-989096cb06e5\", \"y\": [0.4244, 0.0034], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_2\"}, {\"x\": [0.0, 1.0], \"uid\": \"1e51ad24-ba9e-11e8-a9b3-989096cb06e5\", \"y\": [0.5334, 0.008], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_5\"}, {\"x\": [0.0, 1.0], \"uid\": \"1e51ad25-ba9e-11e8-a9b3-989096cb06e5\", \"y\": [0.61, 0.013], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_10\"}, {\"x\": [0.0, 1.0], \"uid\": \"1e51ad26-ba9e-11e8-a9b3-989096cb06e5\", \"y\": [0.6806, 0.021], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_20\"}, {\"x\": [0.0, 1.0], \"uid\": \"1e51ad27-ba9e-11e8-a9b3-989096cb06e5\", \"y\": [0.7612, 0.037], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_50\"}],\n",
        "            {\"yaxis\": {\"title\": \"Recall Values\"}, \"xaxis\": {\"title\": \"Epochs\"}, \"title\": \"How the recalls at top n are changing for each epoch\"},\n",
        "            {\"showLink\": true, \"linkText\": \"Export to plot.ly\"}\n",
-       "        ).then(function () {return Plotly.addFrames('6fd36332-e59e-4eb8-9205-50435a51f8c7',{});}).then(function(){Plotly.animate('6fd36332-e59e-4eb8-9205-50435a51f8c7');})\n",
+       "        ).then(function () {return Plotly.addFrames('024e94bc-e691-4a17-b4fc-97ea41b50421',{});}).then(function(){Plotly.animate('024e94bc-e691-4a17-b4fc-97ea41b50421');})\n",
        "        });</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"6fd36332-e59e-4eb8-9205-50435a51f8c7\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
+       "<div id=\"024e94bc-e691-4a17-b4fc-97ea41b50421\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
        "        Plotly.plot(\n",
-       "            '6fd36332-e59e-4eb8-9205-50435a51f8c7',\n",
-       "            [{\"x\": [0.0, 1.0, 2.0], \"uid\": \"f8395484-ba5a-11e8-a9b3-989096cb06e5\", \"y\": [0.0898, 0.0896, 0.0898], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_1\"}, {\"x\": [0.0, 1.0, 2.0], \"uid\": \"f8395485-ba5a-11e8-a9b3-989096cb06e5\", \"y\": [0.1446, 0.1448, 0.1448], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_2\"}, {\"x\": [0.0, 1.0, 2.0], \"uid\": \"f8395486-ba5a-11e8-a9b3-989096cb06e5\", \"y\": [0.2394, 0.2396, 0.2398], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_5\"}, {\"x\": [0.0, 1.0, 2.0], \"uid\": \"f8395487-ba5a-11e8-a9b3-989096cb06e5\", \"y\": [0.306, 0.306, 0.3062], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_10\"}, {\"x\": [0.0, 1.0, 2.0], \"uid\": \"f8395488-ba5a-11e8-a9b3-989096cb06e5\", \"y\": [0.3778, 0.378, 0.3778], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_20\"}, {\"x\": [0.0, 1.0, 2.0], \"uid\": \"f8395489-ba5a-11e8-a9b3-989096cb06e5\", \"y\": [0.4706, 0.4714, 0.4704], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_50\"}],\n",
+       "            '024e94bc-e691-4a17-b4fc-97ea41b50421',\n",
+       "            [{\"x\": [0.0, 1.0], \"uid\": \"1e51ad22-ba9e-11e8-a9b3-989096cb06e5\", \"y\": [0.3372, 0.0022], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_1\"}, {\"x\": [0.0, 1.0], \"uid\": \"1e51ad23-ba9e-11e8-a9b3-989096cb06e5\", \"y\": [0.4244, 0.0034], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_2\"}, {\"x\": [0.0, 1.0], \"uid\": \"1e51ad24-ba9e-11e8-a9b3-989096cb06e5\", \"y\": [0.5334, 0.008], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_5\"}, {\"x\": [0.0, 1.0], \"uid\": \"1e51ad25-ba9e-11e8-a9b3-989096cb06e5\", \"y\": [0.61, 0.013], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_10\"}, {\"x\": [0.0, 1.0], \"uid\": \"1e51ad26-ba9e-11e8-a9b3-989096cb06e5\", \"y\": [0.6806, 0.021], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_20\"}, {\"x\": [0.0, 1.0], \"uid\": \"1e51ad27-ba9e-11e8-a9b3-989096cb06e5\", \"y\": [0.7612, 0.037], \"mode\": \"lines+markers\", \"type\": \"scatter\", \"name\": \"Top top_50\"}],\n",
        "            {\"yaxis\": {\"title\": \"Recall Values\"}, \"xaxis\": {\"title\": \"Epochs\"}, \"title\": \"How the recalls at top n are changing for each epoch\"},\n",
        "            {\"showLink\": true, \"linkText\": \"Export to plot.ly\"}\n",
-       "        ).then(function () {return Plotly.addFrames('6fd36332-e59e-4eb8-9205-50435a51f8c7',{});}).then(function(){Plotly.animate('6fd36332-e59e-4eb8-9205-50435a51f8c7');})\n",
+       "        ).then(function () {return Plotly.addFrames('024e94bc-e691-4a17-b4fc-97ea41b50421',{});}).then(function(){Plotly.animate('024e94bc-e691-4a17-b4fc-97ea41b50421');})\n",
        "        });</script>"
       ]
      },
@@ -287,19 +275,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1    0.271567\n",
-       "2    0.271467\n",
-       "0    0.271367\n",
+       "2    0.566667\n",
+       "0    0.566633\n",
+       "1    0.566500\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -345,34 +333,34 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0908</td>\n",
+       "      <td>0.1530</td>\n",
+       "      <td>0.2420</td>\n",
+       "      <td>0.3130</td>\n",
+       "      <td>0.3828</td>\n",
+       "      <td>0.4760</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>0.0898</td>\n",
-       "      <td>0.1448</td>\n",
-       "      <td>0.2398</td>\n",
-       "      <td>0.3062</td>\n",
-       "      <td>0.3778</td>\n",
-       "      <td>0.4704</td>\n",
+       "      <td>0.0906</td>\n",
+       "      <td>0.1526</td>\n",
+       "      <td>0.2408</td>\n",
+       "      <td>0.3128</td>\n",
+       "      <td>0.3822</td>\n",
+       "      <td>0.4782</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>0.0898</td>\n",
-       "      <td>0.1446</td>\n",
-       "      <td>0.2394</td>\n",
-       "      <td>0.3060</td>\n",
-       "      <td>0.3778</td>\n",
-       "      <td>0.4706</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0896</td>\n",
-       "      <td>0.1448</td>\n",
-       "      <td>0.2396</td>\n",
-       "      <td>0.3060</td>\n",
-       "      <td>0.3780</td>\n",
-       "      <td>0.4714</td>\n",
+       "      <td>0.0906</td>\n",
+       "      <td>0.1526</td>\n",
+       "      <td>0.2408</td>\n",
+       "      <td>0.3128</td>\n",
+       "      <td>0.3820</td>\n",
+       "      <td>0.4778</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -380,12 +368,12 @@
       ],
       "text/plain": [
        "   epoch   top_1   top_2   top_5  top_10  top_20  top_50\n",
-       "2      2  0.0898  0.1448  0.2398  0.3062  0.3778  0.4704\n",
-       "0      0  0.0898  0.1446  0.2394  0.3060  0.3778  0.4706\n",
-       "1      1  0.0896  0.1448  0.2396  0.3060  0.3780  0.4714"
+       "1      1  0.0908  0.1530  0.2420  0.3130  0.3828  0.4760\n",
+       "2      2  0.0906  0.1526  0.2408  0.3128  0.3822  0.4782\n",
+       "0      0  0.0906  0.1526  0.2408  0.3128  0.3820  0.4778"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
